clusters/groups/on-prem/dev/docker-desktop/overlays/istio-system/global-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: global-gateway
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        #- "*"
        - "kiali.docker.internal"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: argo-cert
    - hosts:
        #- "*"
        - "kiali.docker.internal"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
